# vi-files

./: README.md
amaze-your-friends/: HELP  INDEX  WHO  comp.editors.EDS  comp.editors.FAQ  comp.editors.PNT  comp.editors2  comp.editors3
amaze-your-friends/comp.editors/: 8bit  append  blankline  blockdel  blocks  buffer  buffera  ced.tips.1  ced.tips.2  ced.tips.3  ced.tips.4  ced.tips.5  ced.tips.6  ced.tips.Inx  cmdline  cols  columedit  counter  countwords  crlf  cshline  ctrl  currfn  cutpaste  demyst  executing  history  insert  macrolimits  mapping  mapspace  maptab  misc  modeline  multiple  nthoccurance  octal  paragraph  parawrap  readin  (+19 more)
amaze-your-friends/docs/: 132  POINTERS  advocasy  apwh.ms  arrowkwys  beginers  books  bugs  capitalize  card.tex  caseconv  casesr  chars  chars.tex  ckv  ckv2  course  crypt  ctags  editech.1  editech.2  editech.3  editech.4  editech.5  editech.books  elvis  ex.changes  ex.fix  ex.reference  ex.summary  formating  globaldelete  innforing  intro  intro.ps  jl.ex.ref  keybind  keymapings  keys  love  (+29 more)
amaze-your-friends/docs/bed/: Makefile  bed.c  bed.n  getcom.c  patch1  patchlevel  quest.c
amaze-your-friends/docs/course-tar/vi/: README  makevi  vi  vi.old
amaze-your-friends/docs/course-tar/vi/1/: 1.0  1.1  1.2  1.3  1.4
amaze-your-friends/docs/course-tar/vi/2/: 2.0  2.1  2.2  2.3  2.5  2.6  2.7  2.8
amaze-your-friends/docs/course-tar/vi/3/: 3.0  3.1  3.2  3.3  3.4  3.5
amaze-your-friends/docs/course-tar/vi/4/: 4.0  4.1  4.2  4.3  4.4  4.5  4.6  4.7  4.8  4.9
amaze-your-friends/docs/course-tar/vi/5/: 5.0  5.1  5.15  5.2  5.25  5.3  5.4  5.5  5.6
amaze-your-friends/docs/course-tar/vi/6/: 6.0  6.1  6.15  6.2  6.25  6.3  6.4  6.5  6.6  6.7  6.8  6.96  6.99
amaze-your-friends/docs/course-tar/vi/head/: .head.2  head.1  head.2  head.3
amaze-your-friends/docs/e2/: MANIFEST  MODS  Makefile  README  abandon.c  ask_hist.c  check_hist.c  dir_check.c  dir_find.c  dir_find.h  do_vi.c  e.1  e.c  e.h  e_error.c  e_update.sh  find_hist.c  find_match.c  get_temp.c  inheritance.c  insert_cmd.c  io.c  main.c  multiple.c  new_vi.c  normal.c  nth_hist.c  read_hist.c  reconstruct.c  signal.c  sp_dist.c  spell_help.c  tags  terminal.c
amaze-your-friends/docs/lvi/: LVI  README.lvi  lvi  lvi.change  lvi.cross  lvi.delete  lvi.doc  lvi.init  lvi.insert  lvi.map  lvi.open  lvi.put  lvi.quit  lvi.replace  lvi.subst  lvi.unm  vi.help
amaze-your-friends/docs/macroDoc/vi.macroDoc/: README  macros.doc  sample_exrc  vicoms.doc
amaze-your-friends/docs/motd/vimotd/: Makefile  README  USENET.header  motd  motd.nawk  vimotd
amaze-your-friends/docs/nvi/: nvi.note  nvi.shar  orig
amaze-your-friends/docs/online-101/vi-online/: vi.ende  vi.help  vi.olh
amaze-your-friends/docs/online-200/vi-online.200/: COPYRIGHT  FILES  README  install  readme  vi-setup.1  vi-setup.2  vi.ADVANCED  vi.BASIC  vi.ende  vi.olh.1  vi.olh.2
amaze-your-friends/docs/rcut/: macros  rcut.1  rcut.CED  rcut.c
amaze-your-friends/docs/tutor-tar/: Readme  tutor.vi  vitutor
amaze-your-friends/docs/ucb/vi.ucb/: makefile
amaze-your-friends/docs/vifs/: CED  stack.ex  vi.vifs  vifs.pl  vifs.qrf
amaze-your-friends/docs/vilearn/: 1basics  2moving  3cutpaste  3temp  4inserting  5tricks  Makefile  README  newsheader  outline  spellmacros  vilearn.sh
amaze-your-friends/macros/: README  blocks  blocks.d  c.template  case  case.word  case.word2  cases.d  caseword  center  cil.tc  cmacros  complete  complete.ext  complete.new  cvi  emacs.style  execute  exrc.ach  exrc.brp  fill  folding  folding.d  generals  generals.2  hanoi  ispell  jl.ex  latex  latex2  mail.enc  man  markring  modula2  modula2.new  morse  pascal  perl  rcs  ruler  (+5 more)
amaze-your-friends/macros/ball/: ball  ball.1  ball.2  ball.3  ball.4
amaze-your-friends/macros/commentC/: README  comment.macros  install.macros  macro-off  macro-on
amaze-your-friends/macros/evi/: e-command.unmap  e-ctrlm.unmap  e-mode.map  e-mode.unmap  evi  evi.note  evi.sh  evi.sh.note
amaze-your-friends/macros/fold/: exrc.fold  fold  vfold
amaze-your-friends/macros/goodies/: README.std  c  c.ab  c.cab  c.ck  c.ik  c.mc  c.ms  c.se  c.top  fkeys  goodies  readme.c  std  std.ab  std.ck  std.fast  std.ik  std.mc  std.ms  std.se  vtkeys
amaze-your-friends/macros/maze/: fil  intro  maze.out  maze.vi.macros.uu
amaze-your-friends/macros/turing/: README  TMabc  TMabc2  TMupdown  shar.file  tm
amaze-your-friends/macros/vogel/: cvi  mkrcsh.c  remark  shvi  tst.mkrcsh
book_examples/: ch11-loremipsum.latin  ch11-thesaurus.txt  ch14-famous-speech.txt  chapter-10-file1.txt  chapter-10-file2.txt  chapter-12-settimeofdaycolors.vim  chapter-2-bad.txt  chapter-2-practice.txt  cinoptionsexample.c  fibonacci.c  fibonacci_errors.c  foldfileC.c  foldfileC_2.c  indent.txt  latin.vim
book_examples/ch07-test-tags/: main.c
book_examples/test-tags/: Makefile  getopt.c  getopt1.c  tags
clewn-1.15/: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  clewn.c  clewn.h  config.h.in  configure  configure.ac  gdb.h  gdb_lvl2.c  gdb_lvl3.c  misc.c  misc.h  netbeans.c  obstack.c  pty.c
clewn-1.15/runtime/: Makefile.am  Makefile.in
clewn-1.15/runtime/doc/: clewn.txt
configs/: README.md  dot-screenrc  elbert-hannah.vimrc  less_env
unix-world-tutorial/: 009-index.html  009.part1.html  009.part2.answers.html  009.part2.html  009.part3.answers.html  009.part3.html  009.part4.answers.html  009.part4.html  009.part5.html  009.part6.html  009.part7.html  009.part8.answers.html  009.part8.html  009.part9.answers.html  009.part9.html  refchart.html  text_edit.html  tricks.vim.html  vimtips.html  zintz-style.css
